...
        android:layout_marginTop="60dip"
        android:id="@+id/custom_dialog_layout_v_content"
        android:layout_below="@+id/custom_dialog_layout_tv_content"
        />

    <TextView
        android:id="@+id/custom_dialog_layout_tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/custom_dialog_layout_v_content"
        android:background="@drawable/common_item_click_selector"
        android:gravity="center"
        android:text="Cancel"
        android:paddingLeft="@dimen/margin"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:layout_marginRight="@dimen/margin"
        android:paddingRight="@dimen/margin_half"
        android:layout_toLeftOf="@+id/custom_dialog_layout_tv_confirm"
        android:textColor="@color/common_gray_title_color"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/custom_dialog_layout_tv_confirm"
        android:layout_width="wrap_content"
...
