...
            android:id="@+id/update_dialog_layout_v_mid"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/common_line_color" />

        <TextView
            android:id="@+id/update_dialog_layout_tv_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:background="@drawable/common_item_click_selector"
...
